关于config文件修改
指定主题，语言标题，主要的是deploy设置

--- a/hexo/_config.yml
+++ b/hexo/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: ZP Blog
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
-language: en
+author: ZP
+language: zh-CN
 timezone: ''
 
 # URL
@@ -97,9 +97,11 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: https://github.com/stubborn123/stubborn123.github.io.git
+  branch: master
