--- a/hexo/_config.yml
+++ b/hexo/_config.yml
@@ -104,7 +104,7 @@ theme: next
 deploy:
   type: git
   repo: https://github.com/stubborn123/stubborn123.github.io.git
-  branch: master
+  branch: hexo
 
 # Auot Excerpt
 auto_excerpt:
